// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet should render default ActionSheet 1`] = `
<view
  catch-move=""
  class="at-action-sheet"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <!--v-if-->
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
    </view>
    <!-- footer -->
    <!--v-if-->
  </view>
</view>
`;

exports[`ActionSheet should render opened ActionSheet -- props title 1`] = `
<view
  class="at-action-sheet__header"
>
  
  清除位置信息后， 别人将不能查看到你
可以通过转义字符换行
  
</view>
`;

exports[`ActionSheet should render opened ActionSheet with header, body and footer 1`] = `
<view
  catch-move=""
  class="at-action-sheet at-action-sheet--active"
>
  <!-- overlay -->
  <view
    class="at-action-sheet__overlay"
  />
  <!-- container -->
  <view
    class="at-action-sheet__container"
  >
    <!-- title -->
    <view
      class="at-action-sheet__header"
    >
      
      清除位置信息后， 别人将不能查看到你
可以通过转义字符换行
      
    </view>
    <!-- body -->
    <view
      class="at-action-sheet__body"
    >
      
      
    </view>
    <!-- footer -->
    <view
      class="at-action-sheet__footer"
    >
      
      取消
      
    </view>
  </view>
</view>
`;

exports[`ActionSheet should render opened ActionSheet with prop cancelText 1`] = `
<view
  class="at-action-sheet__footer"
>
  
  取消
  
</view>
`;

exports[`ActionSheet should render opened ActionSheet with slot contents 1`] = `
<view
  class="at-action-sheet__body"
>
  
  
  <view
    class="at-action-sheet__item"
  >
    
    按钮一
    
  </view>
  <view
    class="at-action-sheet__item"
  >
    
    按钮二
    
  </view>
  
  
</view>
`;
